# cli

guid/: Cargo.toml
guid/src/: main.rs
txt/: Cargo.toml
txt/src/: main.rs
